# django-delayed-tasks

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  tox.ini
.github/workflows/: lint.yml  main.yml
delayed_tasks/: __init__.py  apps.py  models.py  receivers.py  settings.py  tasks.py  tests.py
delayed_tasks/migrations/: 0001_initial.py
delayed_tasks/t/: conftest.py  test.py
tests/: conftest.py  settings.py  test_delayed_tasks.py
