[tool.poetry]
name = "delayed_tasks"
version = "0.1.0"
description = ""
authors = ["Pavlos Kallis <pakallis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
celery = ">=3.6"
redis = "^4.3.4"
psycopg2-binary = "^2.9.5"
django = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "^3.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
